--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,9 @@ plugins {
 	id "com.jfrog.artifactory" version "4.21.0"
 }
 
+apply plugin: 'java'
+apply plugin: 'maven'
+
 group = 'com.oddprints'
 version = '0.0.1'
 sourceCompatibility = '1.8'
