--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
 	id 'java'
 	id 'maven'
 	id "com.jfrog.artifactory" version "4.21.0"
+	id "com.diffplug.spotless" version "5.5.1"
 }
 
 apply plugin: 'java'
@@ -28,6 +29,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
+}
+
+spotless {
+	java {
+		googleJavaFormat().aosp()
+	}
 }
 
 test {
