Create seperate boot jar and depenedency jar. spring stuff I don't fully understand so this feels wrong

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,11 @@ jar {
 		attributes 'Implementation-Title': 'prodigi-java-sdk',
 				'Implementation-Version': archiveVersion
 	}
+    enabled = true
+}
+
+bootJar {
+	archiveClassifier = 'boot'
 }
 
 repositories {
