Add publish to github packages task

--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
 	id 'maven'
 	id "com.jfrog.artifactory" version "4.21.0"
 	id "com.diffplug.spotless" version "5.5.1"
+	id "maven-publish"
 }
 
 apply plugin: 'java'
@@ -73,3 +74,20 @@ configurations {
 	published
 }
 
+publishing {
+	repositories {
+		maven {
+			name = "GitHubPackages"
+			url = uri("https://maven.pkg.github.com/OddPrints/prodigi-java-sdk")
+			credentials {
+				username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
+				password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
+			}
+		}
+	}
+	publications {
+		gpr(MavenPublication) {
+			from(components.java)
+		}
+	}
+}
