Change workflow to trigger on push

--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -11,8 +11,7 @@ env:
   PRODIGI_API_KEY_SANDBOX: ${{ secrets.PRODIGI_API_KEY_SANDBOX }}
 
 on:
-  release:
-    types: [created]
+  push
 
 jobs:
   build:
