Remove 'plain' suffix from jars so that jitpack can find them

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ jar {
 				'Implementation-Version': archiveVersion
 	}
     enabled = true
+	archiveClassifier = '' // use empty string instead of "plain"
 }
 
 bootJar {
